--- a/.gitignore
+++ b/.gitignore
@@ -1336,3 +1336,216 @@ pro_env/lib/python3.9/site-packages/speech_recognition/pocketsphinx-data/en-US/a
 pro_env/lib/python3.9/site-packages/speech_recognition/pocketsphinx-data/en-US/acoustic-model/sendump
 pro_env/lib/python3.9/site-packages/speech_recognition/pocketsphinx-data/en-US/acoustic-model/transition_matrices
 pro_env/lib/python3.9/site-packages/speech_recognition/pocketsphinx-data/en-US/acoustic-model/variances
+pro_env/lib/python3.9/site-packages/PIL/__init__.py
+pro_env/lib/python3.9/site-packages/PIL/__main__.py
+pro_env/lib/python3.9/site-packages/PIL/_binary.py
+pro_env/lib/python3.9/site-packages/PIL/_imaging.cpython-39-x86_64-linux-gnu.so
+pro_env/lib/python3.9/site-packages/PIL/_imagingcms.cpython-39-x86_64-linux-gnu.so
+pro_env/lib/python3.9/site-packages/PIL/_imagingft.cpython-39-x86_64-linux-gnu.so
+pro_env/lib/python3.9/site-packages/PIL/_imagingmath.cpython-39-x86_64-linux-gnu.so
+pro_env/lib/python3.9/site-packages/PIL/_imagingmorph.cpython-39-x86_64-linux-gnu.so
+pro_env/lib/python3.9/site-packages/PIL/_imagingtk.cpython-39-x86_64-linux-gnu.so
+pro_env/lib/python3.9/site-packages/PIL/_tkinter_finder.py
+pro_env/lib/python3.9/site-packages/PIL/_util.py
+pro_env/lib/python3.9/site-packages/PIL/_version.py
+pro_env/lib/python3.9/site-packages/PIL/_webp.cpython-39-x86_64-linux-gnu.so
+pro_env/lib/python3.9/site-packages/PIL/BdfFontFile.py
+pro_env/lib/python3.9/site-packages/PIL/BlpImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/BmpImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/BufrStubImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/ContainerIO.py
+pro_env/lib/python3.9/site-packages/PIL/CurImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/DcxImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/DdsImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/EpsImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/ExifTags.py
+pro_env/lib/python3.9/site-packages/PIL/features.py
+pro_env/lib/python3.9/site-packages/PIL/FitsStubImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/FliImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/FontFile.py
+pro_env/lib/python3.9/site-packages/PIL/FpxImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/FtexImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/GbrImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/GdImageFile.py
+pro_env/lib/python3.9/site-packages/PIL/GifImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/GimpGradientFile.py
+pro_env/lib/python3.9/site-packages/PIL/GimpPaletteFile.py
+pro_env/lib/python3.9/site-packages/PIL/GribStubImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/Hdf5StubImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/IcnsImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/IcoImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/Image.py
+pro_env/lib/python3.9/site-packages/PIL/ImageChops.py
+pro_env/lib/python3.9/site-packages/PIL/ImageCms.py
+pro_env/lib/python3.9/site-packages/PIL/ImageColor.py
+pro_env/lib/python3.9/site-packages/PIL/ImageDraw.py
+pro_env/lib/python3.9/site-packages/PIL/ImageDraw2.py
+pro_env/lib/python3.9/site-packages/PIL/ImageEnhance.py
+pro_env/lib/python3.9/site-packages/PIL/ImageFile.py
+pro_env/lib/python3.9/site-packages/PIL/ImageFilter.py
+pro_env/lib/python3.9/site-packages/PIL/ImageFont.py
+pro_env/lib/python3.9/site-packages/PIL/ImageGrab.py
+pro_env/lib/python3.9/site-packages/PIL/ImageMath.py
+pro_env/lib/python3.9/site-packages/PIL/ImageMode.py
+pro_env/lib/python3.9/site-packages/PIL/ImageMorph.py
+pro_env/lib/python3.9/site-packages/PIL/ImageOps.py
+pro_env/lib/python3.9/site-packages/PIL/ImagePalette.py
+pro_env/lib/python3.9/site-packages/PIL/ImagePath.py
+pro_env/lib/python3.9/site-packages/PIL/ImageQt.py
+pro_env/lib/python3.9/site-packages/PIL/ImageSequence.py
+pro_env/lib/python3.9/site-packages/PIL/ImageShow.py
+pro_env/lib/python3.9/site-packages/PIL/ImageStat.py
+pro_env/lib/python3.9/site-packages/PIL/ImageTk.py
+pro_env/lib/python3.9/site-packages/PIL/ImageTransform.py
+pro_env/lib/python3.9/site-packages/PIL/ImageWin.py
+pro_env/lib/python3.9/site-packages/PIL/ImImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/ImtImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/IptcImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/Jpeg2KImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/JpegImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/JpegPresets.py
+pro_env/lib/python3.9/site-packages/PIL/McIdasImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/MicImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/MpegImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/MpoImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/MspImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PaletteFile.py
+pro_env/lib/python3.9/site-packages/PIL/PalmImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PcdImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PcfFontFile.py
+pro_env/lib/python3.9/site-packages/PIL/PcxImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PdfImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PdfParser.py
+pro_env/lib/python3.9/site-packages/PIL/PixarImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PngImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PpmImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PsdImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/PSDraw.py
+pro_env/lib/python3.9/site-packages/PIL/PyAccess.py
+pro_env/lib/python3.9/site-packages/PIL/SgiImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/SpiderImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/SunImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/TarIO.py
+pro_env/lib/python3.9/site-packages/PIL/TgaImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/TiffImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/TiffTags.py
+pro_env/lib/python3.9/site-packages/PIL/WalImageFile.py
+pro_env/lib/python3.9/site-packages/PIL/WebPImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/WmfImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/XbmImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/XpmImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/XVThumbImagePlugin.py
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/__main__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/_binary.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/_tkinter_finder.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/_util.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/_version.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/BdfFontFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/BlpImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/BmpImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/BufrStubImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ContainerIO.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/CurImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/DcxImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/DdsImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/EpsImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ExifTags.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/features.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/FitsStubImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/FliImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/FontFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/FpxImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/FtexImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/GbrImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/GdImageFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/GifImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/GimpGradientFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/GimpPaletteFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/GribStubImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/Hdf5StubImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/IcnsImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/IcoImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/Image.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageChops.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageCms.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageColor.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageDraw.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageDraw2.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageEnhance.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageFilter.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageFont.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageGrab.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageMath.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageMode.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageMorph.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageOps.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImagePalette.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImagePath.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageQt.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageSequence.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageShow.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageStat.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageTk.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageTransform.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImageWin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/ImtImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/IptcImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/Jpeg2KImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/JpegImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/JpegPresets.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/McIdasImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/MicImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/MpegImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/MpoImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/MspImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PaletteFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PalmImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PcdImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PcfFontFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PcxImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PdfImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PdfParser.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PixarImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PngImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PpmImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PsdImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PSDraw.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/PyAccess.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/SgiImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/SpiderImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/SunImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/TarIO.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/TgaImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/TiffImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/TiffTags.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/WalImageFile.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/WebPImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/WmfImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/XbmImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/XpmImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/PIL/__pycache__/XVThumbImagePlugin.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/Pillow-8.3.2.dist-info/INSTALLER
+pro_env/lib/python3.9/site-packages/Pillow-8.3.2.dist-info/LICENSE
+pro_env/lib/python3.9/site-packages/Pillow-8.3.2.dist-info/METADATA
+pro_env/lib/python3.9/site-packages/Pillow-8.3.2.dist-info/RECORD
+pro_env/lib/python3.9/site-packages/Pillow-8.3.2.dist-info/REQUESTED
+pro_env/lib/python3.9/site-packages/Pillow-8.3.2.dist-info/top_level.txt
+pro_env/lib/python3.9/site-packages/Pillow-8.3.2.dist-info/WHEEL
+pro_env/lib/python3.9/site-packages/Pillow-8.3.2.dist-info/zip-safe
+pro_env/lib/python3.9/site-packages/Pillow.libs/libfreetype-804dfcff.so.6.18.0
+pro_env/lib/python3.9/site-packages/Pillow.libs/libharfbuzz-527fc88d.so.0.20900.0
+pro_env/lib/python3.9/site-packages/Pillow.libs/libjpeg-183418da.so.9.4.0
+pro_env/lib/python3.9/site-packages/Pillow.libs/liblcms2-035b9744.so.2.0.12
+pro_env/lib/python3.9/site-packages/Pillow.libs/liblzma-d540a118.so.5.2.5
+pro_env/lib/python3.9/site-packages/Pillow.libs/libopenjp2-430a98fc.so.2.4.0
+pro_env/lib/python3.9/site-packages/Pillow.libs/libpng16-213e245f.so.16.37.0
+pro_env/lib/python3.9/site-packages/Pillow.libs/libtiff-9ffe9659.so.5.7.0
+pro_env/lib/python3.9/site-packages/Pillow.libs/libwebp-d8a3db66.so.7.1.2
+pro_env/lib/python3.9/site-packages/Pillow.libs/libwebpdemux-f117ddb4.so.2.0.8
+pro_env/lib/python3.9/site-packages/Pillow.libs/libwebpmux-fe44437b.so.3.0.7
+pro_env/lib/python3.9/site-packages/Pillow.libs/libXau-00ec42fe.so.6.0.0
+pro_env/lib/python3.9/site-packages/Pillow.libs/libxcb-1122e22b.so.1.1.0
+pro_env/lib/python3.9/site-packages/Pillow.libs/libz-dd453c56.so.1.2.11
