--- a/.gitignore
+++ b/.gitignore
@@ -3124,3 +3124,221 @@ pro_env/lib/python3.9/site-packages/pip-21.0.1.dist-info/RECORD
 pro_env/lib/python3.9/site-packages/pip-21.0.1.dist-info/REQUESTED
 pro_env/lib/python3.9/site-packages/pip-21.0.1.dist-info/top_level.txt
 pro_env/lib/python3.9/site-packages/pip-21.0.1.dist-info/WHEEL
+pro_env/bin/clear_comtypes_cache.py
+pro_env/bin/__pycache__/clear_comtypes_cache.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__init__.py
+pro_env/lib/python3.9/site-packages/comtypes/_comobject.py
+pro_env/lib/python3.9/site-packages/comtypes/_meta.py
+pro_env/lib/python3.9/site-packages/comtypes/_safearray.py
+pro_env/lib/python3.9/site-packages/comtypes/automation.py
+pro_env/lib/python3.9/site-packages/comtypes/connectionpoints.py
+pro_env/lib/python3.9/site-packages/comtypes/errorinfo.py
+pro_env/lib/python3.9/site-packages/comtypes/git.py
+pro_env/lib/python3.9/site-packages/comtypes/GUID.py
+pro_env/lib/python3.9/site-packages/comtypes/hresult.py
+pro_env/lib/python3.9/site-packages/comtypes/logutil.py
+pro_env/lib/python3.9/site-packages/comtypes/messageloop.py
+pro_env/lib/python3.9/site-packages/comtypes/npsupport.py
+pro_env/lib/python3.9/site-packages/comtypes/patcher.py
+pro_env/lib/python3.9/site-packages/comtypes/persist.py
+pro_env/lib/python3.9/site-packages/comtypes/safearray.py
+pro_env/lib/python3.9/site-packages/comtypes/shelllink.py
+pro_env/lib/python3.9/site-packages/comtypes/typeinfo.py
+pro_env/lib/python3.9/site-packages/comtypes/util.py
+pro_env/lib/python3.9/site-packages/comtypes/viewobject.py
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/_comobject.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/_meta.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/_safearray.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/automation.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/connectionpoints.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/errorinfo.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/git.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/GUID.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/hresult.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/logutil.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/messageloop.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/npsupport.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/patcher.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/persist.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/safearray.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/shelllink.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/typeinfo.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/util.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/__pycache__/viewobject.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/client/__init__.py
+pro_env/lib/python3.9/site-packages/comtypes/client/_code_cache.py
+pro_env/lib/python3.9/site-packages/comtypes/client/_events.py
+pro_env/lib/python3.9/site-packages/comtypes/client/_generate.py
+pro_env/lib/python3.9/site-packages/comtypes/client/dynamic.py
+pro_env/lib/python3.9/site-packages/comtypes/client/lazybind.py
+pro_env/lib/python3.9/site-packages/comtypes/client/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/client/__pycache__/_code_cache.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/client/__pycache__/_events.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/client/__pycache__/_generate.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/client/__pycache__/dynamic.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/client/__pycache__/lazybind.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/server/__init__.py
+pro_env/lib/python3.9/site-packages/comtypes/server/automation.py
+pro_env/lib/python3.9/site-packages/comtypes/server/connectionpoints.py
+pro_env/lib/python3.9/site-packages/comtypes/server/inprocserver.py
+pro_env/lib/python3.9/site-packages/comtypes/server/localserver.py
+pro_env/lib/python3.9/site-packages/comtypes/server/register.py
+pro_env/lib/python3.9/site-packages/comtypes/server/w_getopt.py
+pro_env/lib/python3.9/site-packages/comtypes/server/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/server/__pycache__/automation.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/server/__pycache__/connectionpoints.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/server/__pycache__/inprocserver.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/server/__pycache__/localserver.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/server/__pycache__/register.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/server/__pycache__/w_getopt.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__init__.py
+pro_env/lib/python3.9/site-packages/comtypes/test/find_memleak.py
+pro_env/lib/python3.9/site-packages/comtypes/test/mylib.idl
+pro_env/lib/python3.9/site-packages/comtypes/test/mytypelib.idl
+pro_env/lib/python3.9/site-packages/comtypes/test/runtests.py
+pro_env/lib/python3.9/site-packages/comtypes/test/setup.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_agilent.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_avmc.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_basic.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_BSTR.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_casesensitivity.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_client.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_collections.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_comserver.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_createwrappers.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_dict.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_dispinterface.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_DISPPARAMS.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_dyndispatch.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_excel.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_findgendir.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_getactiveobj.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_GUID.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_ie.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_jscript.js
+pro_env/lib/python3.9/site-packages/comtypes/test/test_msscript.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_outparam.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_propputref.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_pump_events.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_QueryService.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_safearray.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_sapi.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_server.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_showevents.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_subinterface.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_typeinfo.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_urlhistory.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_variant.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_win32com_interop.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_wmi.py
+pro_env/lib/python3.9/site-packages/comtypes/test/test_word.py
+pro_env/lib/python3.9/site-packages/comtypes/test/TestComServer.idl
+pro_env/lib/python3.9/site-packages/comtypes/test/TestComServer.py
+pro_env/lib/python3.9/site-packages/comtypes/test/TestComServer.tlb
+pro_env/lib/python3.9/site-packages/comtypes/test/TestDispServer.idl
+pro_env/lib/python3.9/site-packages/comtypes/test/TestDispServer.py
+pro_env/lib/python3.9/site-packages/comtypes/test/TestDispServer.tlb
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/find_memleak.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/runtests.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/setup.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_agilent.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_avmc.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_basic.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_BSTR.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_casesensitivity.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_client.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_collections.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_comserver.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_createwrappers.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_dict.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_dispinterface.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_DISPPARAMS.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_dyndispatch.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_excel.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_findgendir.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_getactiveobj.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_GUID.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_ie.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_msscript.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_outparam.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_propputref.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_pump_events.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_QueryService.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_safearray.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_sapi.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_server.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_showevents.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_subinterface.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_typeinfo.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_urlhistory.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_variant.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_win32com_interop.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_wmi.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/test_word.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/TestComServer.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/test/__pycache__/TestDispServer.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/tools/__init__.py
+pro_env/lib/python3.9/site-packages/comtypes/tools/codegenerator.py
+pro_env/lib/python3.9/site-packages/comtypes/tools/tlbparser.py
+pro_env/lib/python3.9/site-packages/comtypes/tools/typedesc_base.py
+pro_env/lib/python3.9/site-packages/comtypes/tools/typedesc.py
+pro_env/lib/python3.9/site-packages/comtypes/tools/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/tools/__pycache__/codegenerator.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/tools/__pycache__/tlbparser.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/tools/__pycache__/typedesc_base.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes/tools/__pycache__/typedesc.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/comtypes-1.1.10.dist-info/INSTALLER
+pro_env/lib/python3.9/site-packages/comtypes-1.1.10.dist-info/LICENSE.txt
+pro_env/lib/python3.9/site-packages/comtypes-1.1.10.dist-info/METADATA
+pro_env/lib/python3.9/site-packages/comtypes-1.1.10.dist-info/RECORD
+pro_env/lib/python3.9/site-packages/comtypes-1.1.10.dist-info/REQUESTED
+pro_env/lib/python3.9/site-packages/comtypes-1.1.10.dist-info/top_level.txt
+pro_env/lib/python3.9/site-packages/comtypes-1.1.10.dist-info/WHEEL
+pro_env/lib/python3.9/site-packages/pyshorteners/__init__.py
+pro_env/lib/python3.9/site-packages/pyshorteners/base.py
+pro_env/lib/python3.9/site-packages/pyshorteners/exceptions.py
+pro_env/lib/python3.9/site-packages/pyshorteners/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/__pycache__/base.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/__pycache__/exceptions.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__init__.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/adfly.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/bitly.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/chilpit.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/clckru.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/cuttly.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/dagd.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/gitio.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/isgd.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/nullpointer.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/osdb.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/owly.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/post.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/qpsru.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/shortcm.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/tinycc.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/tinyurl.py
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/adfly.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/bitly.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/chilpit.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/clckru.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/cuttly.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/dagd.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/gitio.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/isgd.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/nullpointer.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/osdb.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/owly.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/post.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/qpsru.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/shortcm.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/tinycc.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners/shorteners/__pycache__/tinyurl.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/INSTALLER
+pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/METADATA
+pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/RECORD
+pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/REQUESTED
+pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/top_level.txt
+pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/WHEEL
