--- a/.gitignore
+++ b/.gitignore
@@ -3342,3 +3342,18 @@ pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/RECORD
 pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/REQUESTED
 pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/top_level.txt
 pro_env/lib/python3.9/site-packages/pyshorteners-1.0.1.dist-info/WHEEL
+pro_env/lib/python3.9/site-packages/wikipedia/__init__.py
+pro_env/lib/python3.9/site-packages/wikipedia/exceptions.py
+pro_env/lib/python3.9/site-packages/wikipedia/util.py
+pro_env/lib/python3.9/site-packages/wikipedia/wikipedia.py
+pro_env/lib/python3.9/site-packages/wikipedia/__pycache__/__init__.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/wikipedia/__pycache__/exceptions.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/wikipedia/__pycache__/util.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/wikipedia/__pycache__/wikipedia.cpython-39.pyc
+pro_env/lib/python3.9/site-packages/wikipedia-1.4.0.dist-info/INSTALLER
+pro_env/lib/python3.9/site-packages/wikipedia-1.4.0.dist-info/LICENSE
+pro_env/lib/python3.9/site-packages/wikipedia-1.4.0.dist-info/METADATA
+pro_env/lib/python3.9/site-packages/wikipedia-1.4.0.dist-info/RECORD
+pro_env/lib/python3.9/site-packages/wikipedia-1.4.0.dist-info/REQUESTED
+pro_env/lib/python3.9/site-packages/wikipedia-1.4.0.dist-info/top_level.txt
+pro_env/lib/python3.9/site-packages/wikipedia-1.4.0.dist-info/WHEEL
